--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<nav>
+    <a href="index.html">Inicio</a>
+    <a href="./pages/gabriel_curriculo.html">Gabriel Rodrigues</a>
+</nav>    
 </body>
+
 </html>
