--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -22,7 +22,7 @@
     <nav>
 
 
-        
+
        
         <a href="/index.html">Inicio</a>
         <a href="/pages/Fernando_curriculo.html">Fernando Ferreira</a>
